--- a/main.html
+++ b/main.html
@@ -22,12 +22,10 @@
             <img src="productimage1.png" alt="Product Image 1" class="product-image">
             <img src="productimage2.png" alt="Product Image 2" class="product-image">
         </div>
-        <p class="product-price">$60</p>
+        <p class="product-price"></p>
         <div class="purchase-button-container">
             <a href="https://blind-ambition-shop.sellfy.store/p/the-sisyphus-hoodie-fg6zsa/" data-text="Purchase" id="pm6ykr" class="sellfy-buy-button purchase-button"></a>
             <script src="https://sellfy.com/js/api_buttons.js"></script>
-
-
         </div>
     </div>
     <script src="scripts.js"></script>
