--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <title>Blind Ambition</title>
-  <link rel="icon" type="iconpng" href="favicon.png" />
+  <link rel="icon" type="icon.png" href="favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
  
 
